Adding images and a little style

--- a/app/views/pins/show.erb
+++ b/app/views/pins/show.erb
@@ -1,5 +1,6 @@
 <div class="header">
   <h1>
+    <i class="fa fa-laptop"></i>
     <%= "#{@pin.title}" %>
   </h1>
 </div>
@@ -16,6 +17,6 @@
   </p>
 </div>
 <br/>
-<a href="/">
+<a href="/"><i class="fa fa-arrow-circle-left"></i>
   Back to Home
 </a>
