Adding named route for show_by_name route

--- a/app/views/pins/index.erb
+++ b/app/views/pins/index.erb
@@ -17,14 +17,14 @@
                     <%= image_tag('ruby-logo-thumbnail.png') %>
                 <% end %>
               </div>
-              <div class="col-xs-9">
+              <div class="pin-title col-xs-9">
                 <h4>
-                  <a href="<%= "/pins/#{pin.id}" %>">
+                  <a href="<%= pin_by_name_path(slug: pin.slug) %>">
                   <%= "#{pin.title}" %>
                   </a>
                 </h4>
-                <a class="url" href="<%= "#{pin.url}" %>">
-                <%= "#{pin.url}" %>
+                <a class="url" href="<%= "#{pin.url}" %>" target="_blank">
+                <%= "#{pin.url.truncate(30)}" %>
                 </a>
               </div>
             </div>
