Using link_to for links

--- a/app/views/pins/index.erb
+++ b/app/views/pins/index.erb
@@ -19,13 +19,9 @@
               </div>
               <div class="pin-title col-xs-9">
                 <h4>
-                  <a href="<%= pin_by_name_path(slug: pin.slug) %>">
-                  <%= "#{pin.title}" %>
-                  </a>
+                  <%= link_to "#{pin.title}", pin_by_name_path(slug: pin.slug) %>  
                 </h4>
-                <a class="url" href="<%= "#{pin.url}" %>" target="_blank">
-                <%= "#{pin.url.truncate(30)}" %>
-                </a>
+                <%= link_to "#{pin.url.truncate(30)}", "#{pin.url}", html_options = {target: "_blank", class: "url"} %>
               </div>
             </div>
             <hr/>
