deploy image to heroku v2

--- a/app/views/pins/index.erb
+++ b/app/views/pins/index.erb
@@ -12,13 +12,13 @@
             <div class="pin-header row">
               <div class="logo-thumbnail col-xs-3">
                 <% if "#{pin.category.name}" == "rails" %>
-                  <% if "#{pin.image}".nil? == false %>
+                  <% if "#{pin.image}".nil? == "false" %>
                     <img src="<%= pin.image.url(:thumb) %>">
                   <% else %>
                     <%= image_tag('rails-logo-thumbnail.png') %>
                   <% end %>
-                <% elsif "#{pin.category.name}" == "ruby" %>
-                  <% if "#{pin.image}".nil? == false %>
+                <% else "#{pin.category.name}" == "ruby" %>
+                  <% if "#{pin.image}".nil? == "false" %>
                     <img src="<%= pin.image.url(:thumb) %>">
                   <% else %>
                     <%= image_tag('ruby-logo-thumbnail.png') %>
