--- a/app/views/pins/_form.erb
+++ b/app/views/pins/_form.erb
@@ -1,4 +1,4 @@
-  <%= form_for @pin do |f| %>
+  <%= form_for (@pin, multipart: true) do |f| %>
 
     <% if !@errors.nil? %>
       <div class="error">
